fixed required text not having a gap to subtasks

--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -18,6 +18,7 @@
 
     .required-field-section-responsive {
         display: flex;
+        margin-top: 16px;
     }
 }
 
